# edds2png.py

./: .gitignore  README.md  pyproject.toml  requirements.txt
edds2png/: converter.py
edds2png.py/: __init__.py
tests/: test_converter.py
